chore(brand): use sampled avatar green (#609C66) and darker tone for gradients

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       --bg:#070707;
       --panel:#0f0f0f;
       --muted:#9aa0a6;
-      --accent:#2FEA2A; /* radioactive green (from avatar) */
+      --accent:#609C66; /* sampled from avatar */
       --glass: rgba(255,255,255,0.03);
       --radius:12px;
       --max:1100px;
@@ -82,8 +82,8 @@
               <path d="M21 18c1.7 1.7 1.7 4.5 0 6.2L17 28.2c-.9.9-2.4.9-3.3 0l-8.4-8.4c-1.7-1.7-1.7-4.5 0-6.2L9.3 6H11V18h10z" fill="url(#g)" opacity="0.98"/>
               <defs>
                 <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
-                  <stop offset="0%" stop-color="#2FEA2A" stop-opacity="1"/>
-                  <stop offset="100%" stop-color="#00b33c" stop-opacity="1"/>
+                  <stop offset="0%" stop-color="#609C66" stop-opacity="1"/>
+                  <stop offset="100%" stop-color="#3D6341" stop-opacity="1"/>
                 </linearGradient>
               </defs>
               <circle cx="22" cy="8" r="2" fill="#1d1d1d" opacity="0.6" />
