--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
       .preview{height:260px}
       .features{grid-template-columns:1fr 1fr}
       .wrap{padding:28px}
-      nav{flex-wrap:wrap;gap:8px}
+      /* show hamburger, hide nav by default */
+      .nav-toggle{display:inline-flex}
+      nav{display:none}
+      nav.open{display:flex;flex-direction:column;gap:8px;margin-top:12px}
     }
     @media (max-width:640px){
       .hero{grid-template-columns:1fr;}
@@ -158,7 +161,10 @@
           <div style="font-size:12px;color:var(--muted);margin-top:2px">Indie studio — playful, performant games</div>
         </div>
       </div>
-      <nav>
+      <button class="nav-toggle" aria-expanded="false" aria-controls="site-nav" aria-label="Open menu">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 6h18M3 12h18M3 18h18"/></svg>
+      </button>
+      <nav id="site-nav" role="navigation">
         <a class="nav-btn" href="#home">Home</a>
         <a class="nav-btn" href="#games">Games</a>
         <a class="nav-btn" href="#careers">Careers</a>
@@ -485,6 +491,31 @@
       logoWrap.addEventListener('mouseenter', ()=>{ animateOnce(); });
       logoWrap.addEventListener('focus', ()=>{ animateOnce(); });
       // remove periodic schedule to make animation less intrusive
+    })();
+
+    // mobile nav toggle
+    (function(){
+      const btn = document.querySelector('.nav-toggle');
+      const nav = document.getElementById('site-nav');
+      if(!btn || !nav) return;
+      function open(){
+        nav.classList.add('open');
+        btn.setAttribute('aria-expanded','true');
+      }
+      function close(){
+        nav.classList.remove('open');
+        btn.setAttribute('aria-expanded','false');
+      }
+      btn.addEventListener('click', (e)=>{
+        if(nav.classList.contains('open')) close(); else open();
+      });
+      // close on escape
+      document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') close(); });
+      // close when clicking outside nav on small screens
+      document.addEventListener('click',(e)=>{
+        if(window.innerWidth > 900) return;
+        if(!nav.contains(e.target) && !btn.contains(e.target)) close();
+      });
     })();
   </script>
 </body>
