--- a/index.html
+++ b/index.html
@@ -166,9 +166,13 @@
       [style*="max-width:240px"]{max-width:100% !important}
 
       /* make Office aside (contact-card) span full width and use internal padding */
-      /* expand contact-card to full viewport width (full-bleed) */
-      #contact .contact-card{width:100vw;max-width:100vw;margin-left:calc(50% - 50vw);margin-right:calc(50% - 50vw);padding:12px 16px;box-sizing:border-box}
+      /* Make Office aside align with Quick Links on mobile (no full-bleed) */
+      #contact .contact-card{position:static;left:auto;transform:none;width:100%;max-width:100%;margin:0;padding:14px;border-radius:10px;box-sizing:border-box}
       #contact .contact-card > *{width:100%;box-sizing:border-box}
+      /* iPhone specific: align Office with Quick Links (SE 375px) */
+      @media (max-width:420px){
+        #contact .contact-card{width:calc(100% - 32px);max-width:none;margin-left:16px;margin-right:16px;padding:14px;box-sizing:border-box}
+      }
     }
 
     /* small animation for liquid */
@@ -303,8 +307,8 @@
                 <div class="game-meta">Arcade elixir-mixing puzzler — quick runs, tight controls.</div>
               </div>
               <div style="text-align:right">
-                <div style="font-weight:700;color:var(--accent)">Web Demo</div>
-                <div class="game-meta">HTML5 · ~10MB</div>
+                <div style="font-weight:700;color:var(--accent)">Multiplatform</div>
+                <div class="game-meta">Web · Mobile · Desktop</div>
               </div>
             </div>
             <div class="actions"><a class="btn" href="#play">Play Demo</a> <a class="ghost" href="#about">Notes</a></div>
@@ -320,8 +324,8 @@
                 <div class="game-meta">Minimal roguelite with short run loops and expressive controls.</div>
               </div>
               <div style="text-align:right">
-                <div style="font-weight:700;color:var(--muted)">Wishlist</div>
-                <div class="game-meta">Desktop · Native</div>
+                <div style="font-weight:700;color:var(--muted)">Multiplatform</div>
+                <div class="game-meta">Web · Mobile · Desktop</div>
               </div>
             </div>
             <div class="actions"><a class="btn" href="#contact">Wishlist / Download</a> <a class="ghost" href="#about">Dev Log</a></div>
@@ -337,8 +341,8 @@
                 <div class="game-meta">Relaxing harvest puzzler with procedural levels.</div>
               </div>
               <div style="text-align:right">
-                <div style="font-weight:700;color:var(--muted)">Mobile</div>
-                <div class="game-meta">Unity · Lightweight</div>
+                <div style="font-weight:700;color:var(--muted)">Multiplatform</div>
+                <div class="game-meta">Web · Mobile · Desktop</div>
               </div>
             </div>
             <div class="actions"><a class="btn" href="#play">Play Mobile Demo</a> <a class="ghost" href="#about">Art Notes</a></div>
